<resources>
    <string name="app_name">Room App</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="addFAB">Add Floating Action Button</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="save">Save</string>
    <string name="your_account">Your Account</string>
    <string name="enter_login">Enter your login credentials</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="signUp">Sign Up</string>
</resources>