<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login_signup.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_rect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/your_account"
            android:src="@drawable/ic_baseline_account_circle_24" />
    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_login"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_email"
        app:endIconMode="clear_text"
        app:startIconContentDescription="@string/hint_email"
        app:startIconDrawable="@drawable/ic_outline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="@string/hint_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password_text"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textColor="@color/orange"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/orange" />

</LinearLayout>